--- a/src/main/resources/templates/home-login.html
+++ b/src/main/resources/templates/home-login.html
@@ -35,14 +35,8 @@
                     <li><a class="dropdown-item" href="#">Settings</a></li>
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                    <li><a class="dropdown-item" href="/logout">Sign out</a></li>
                 </ul>
-            </div>
-
-            <!-- 로그아웃 시   -->
-            <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
-                <button type="button" class="btn btn-warning">Sign-up</button>
             </div>
         </div>
     </div>
