--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,112 +7,92 @@
     <link th:href="@{/css/mycss.css}"
             href="css/mycss.css" rel="stylesheet">
     <!-- 폰트 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Google 폰트 : Comfortaa -->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">
+    <!-- Google 폰트 : Jua -->
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <!-- 카카오 지도 -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	5fc939c7cde011d462a703125544bac5"></script>
     <script type="text/javascript" th:src="@{/js/map.js}"></script>
-
 </head>
 <body>
 
-<header class="p-3 bg-dark text-white">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-            <
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
-                <li><a href="/about" class="nav-link px-2 text-white">About</a></li>
-            </ul>
+    <header class="p-3 bg-dark text-white">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
+                    <li><a href="/about" class="nav-link px-2 text-white">About</a></li>
+                </ul>
 
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                <input type="search" class="form-control form-control-dark" placeholder="...Search 추후제공" aria-label="Search">
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                    <input type="search" class="form-control form-control-dark" placeholder="...Search 추후제공" aria-label="Search">
+                </form>
+
+                <!-- 로그아웃 시   -->
+                <div class="text-end">
+                    <a href="/login" type="button" class="btn btn-outline-light me-2">Sign-In</a>
+                    <a href="/members/new" type="button" class="btn btn-warning">Sign-Up</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="main-space">
+        <br><br>
+        <h1 >Camping Board</h1><br><br><br>
+        <div id="menuBar" class="menuBar">
+            <form action="/notice/new/form" method="post" style="display: inline-block; text-align: right">
+                <input style="display: none" type="number" id="inBoardId" value="">
+                <button id="btnAddNotice" type="submit" class="btn btn-success" style="text-align: right; display: none">ADD Notice This Board</button>
             </form>
-
-            <!-- 로그아웃 시   -->
-            <div class="text-end">
-                <a href="/login" type="button" class="btn btn-outline-light me-2">Sign-In</a>
-                <a href="/members/new" type="button" class="btn btn-warning">Sign-Up</a>
-            </div>
         </div>
-    </div>
-</header>
-
-<div class="main-space">
-    <br><br>
-    <h1 >Camping Board</h1><br><br><br>
-    <div id="map">
-    </div>
-    <script th:inline="javascript">
-        console.log([[${boardList}]]);
-        let boardList = [[${boardList}]];
-        // 지도 생성
-        mapMaker([[${boardList}]]);
-    </script>
-    <div class="board-space">
-        <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white" style="margin-left: 20px; width: 400px;">
-            <a class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom" style="background-color: #000069">
-                <span class="fs-5 fw-bold" style="color: white">Board List</span>
-
-
-            </a>
-            <!--
-                게시판 정보 삽입
-                - 게시판 제목
-                - 게시판 내용
-                - 최종 수정일
-            -->
-
-            <div id="noticeSpace" class="list-group list-group-flush border-bottom scrollarea">
-                <!--
-                    타임리프 반복문 삽입
-                    - 게시물 정보를 반복
-                    - 게시판 제목
-                    - 게시판 수정 일자
-                    - 추천 수 / 반대
-                    - 댓글 수
-                -->
-                <a href="#" class="list-group-item list-group-item-action active py-3 lh-tight" aria-current="true">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">게시판 미선택 </strong>
-                        <br>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-10 mb-1 small">!!! 지도에서 게시판을 클릭해주세요 !!! </div>
-                    <br>
-                    <br>
-                    <br>
+        <br><br>
+        <div id="map">
+        </div>
+        <script th:inline="javascript">
+            // 지도 생성
+            mapMaker([[${boardList}]]);
+        </script>
+        <div class="board-space">
+            <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white" style="margin-left: 20px; width: 400px;">
+                <a class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom " style="background-color: #000069">
+                    <span id="boardTitle" class="fs-5 fw-bold" style="color: white">Board List</span>
                 </a>
+                <div id="noticeSpace" class="list-group list-group-flush border-bottom scrollarea">
+                    <a class="list-group-item list-group-item-action active py-3 lh-tight" aria-current="true">
+                        <div class="d-flex w-100 align-items-center justify-content-between">
+                            <strong class="mb-1">게시판 미선택 </strong>
+                            <br>
+                            <br>
+                            <br>
+                        </div>
+                        <strong class="mb-1">마커의 버튼을 클릭해 게시판을 선택해주세요 >_< </strong>
+                        <br>
+                        <br>
+                        <br>
+                    </a>
+                </div>
             </div>
         </div>
+    </div>
 
-    </div>
-</div>
-
-<div class="container" style="max-width: 600px">
-    <div class="py-5 text-center">
-        <h2 id="spotDisplay">홈 화면</h2>
-    </div>
-    <div class="row">
-        <div class="col">
-            <button class="w-100 btn btn-secondary btn-lg" type="button"
-                    th:onclick="|location.href='@{/members/add}'|">
-                버튼 1
-            </button>
+    <div class="container" style="max-width: 600px">
+        <div class="py-5 text-center">
+            <h2 id="spotDisplayLatitude">신규 게시판을 생성할 위치를</h2>
+            <h2 id="spotDisplayLongitude">클릭해보세요 ^0^</h2><br>
+            <form action="/board/new/form" method="post" style="display: inline-block; text-align: center">
+                <input style="display: none" type="text" id="inLatitude" value="">
+                <input style="display: none" type="text" id="inLongitude" value="">
+                <button id="btnAddBoard" class="btn btn-secondary" type="submit" style="display: none" >
+                    선택한 위치에 게시판 생성
+                </button>
+            </form>
         </div>
-        <div class="col">
-            <button class="w-100 btn btn-dark btn-lg"
-                    onclick="location.href='items.html'"
-                    th:onclick="|location.href='@{/login}'|" type="button">
-                버튼 2
-            </button>
-        </div>
+        <hr class="my-4">
+        <br><br><br>
     </div>
-    <hr class="my-4">
-</div> <!-- /container -->
 </body>
 </html>
