--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -9,30 +9,26 @@
           href="css/mycss.css" rel="stylesheet">
 </head>
 <body class="text-center">
-
-<main class="login-form">
-    <br>
-    <br>
-    <br>
-    <form>
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1><br><br>
-
-        <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">User Login ID</label>
-        </div>
+    <main class="login-form">
         <br>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">Password</label>
-        </div>
         <br>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; since 2022</p>
-    </form>
-</main>
+        <br>
+        <form action="/login" method="post">
+            <h1 class="h3 mb-3 fw-normal">Please sign in</h1><br><br>
 
-
-
+            <div class="form-floating">
+                <input type="text" class="form-control" id="loginId" name="loginId" placeholder="name@example.com">
+                <label for="loginId">User Login ID</label>
+            </div>
+            <br>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                <label for="password">Password</label>
+            </div>
+            <br>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <p class="mt-5 mb-3 text-muted">&copy; since 2022</p>
+        </form>
+    </main>
 </body>
 </html>
