make memberId check logic

--- a/src/main/resources/templates/member/addMemberForm.html
+++ b/src/main/resources/templates/member/addMemberForm.html
@@ -18,7 +18,7 @@
             <form >
                 <div class="col-md-4">
                     <label for="inLoginId" class="form-label">User Id</label>
-                    <input type="text" class="form-control is-valid" id="inLoginId" value="User Id" required>
+                    <input type="text" class="form-control is-valid" id="inLoginId" value="" required>
                     <button class="btn btn-primary" onclick="checkId()">Check Id</button>
                     <div class="valid-feedback">
                         Looks good!
